--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -603,12 +603,12 @@ context_menu:
         type: string
         description: |
           The type of option selected.
-          Options are listed in the OptionExtra enumeration.
+          Options are listed in the ContextMenuTelemetry.OptionExtra enumeration.
       origin:
         type: string
         description: |
           The type of context menu the option was selected from.
-          Options are listed in the OriginExtra enumeration.
+          Options are listed in the ContextMenuTelemetry.OriginExtra enumeration.
     bugs:
       - https://mozilla-hub.atlassian.net/browse/FXIOS-11798
     data_reviews:
@@ -628,7 +628,7 @@ context_menu:
         type: string
         description: |
           The type of context menu the option was selected from.
-          Options are listed in the OriginExtra enumeration.
+          Options are listed in the ContextMenuTelemetry.OriginExtra enumeration.
     bugs:
       - https://mozilla-hub.atlassian.net/browse/FXIOS-11798
     data_reviews:
@@ -648,7 +648,7 @@ context_menu:
         type: string
         description: |
           The type of context menu the option was selected from.
-          Options are listed in the OriginExtra enumeration.
+          Options are listed in the ContextMenuTelemetry.OriginExtra enumeration.
     bugs:
       - https://mozilla-hub.atlassian.net/browse/FXIOS-11798
     data_reviews:
