--- a/.github/workflows/focus-ios-ui-tests.yml
+++ b/.github/workflows/focus-ios-ui-tests.yml
@@ -7,8 +7,8 @@ on:
 
 env:
     browser: focus-ios
-    xcode_version: 16.2
-    ios_version: 18.2
+    xcode_version: 16.3
+    ios_version: 18.3.1
     ios_simulator_default: iPhone 16
     xcodebuild_scheme: Focus
     xcodebuild_target: XCUITest
@@ -29,6 +29,7 @@ jobs:
                 xcodebuild -version
                 ./checkout.sh
                 ./bootstrap.sh --force
+                sudo xcodes runtimes install "iOS ${{ env.ios_version }}"
             - name: Compile source code
               id: compile
               run: |
