--- a/bitrise.yml
+++ b/bitrise.yml
@@ -59,24 +59,27 @@ workflows:
             ls /Users/vagrant/git/DerivedData
 
     - xcode-test-without-building@0:
-        timeout: 1200
-        inputs:
-        - destination: platform=iOS Simulator,name=iPhone 16,OS=18.2
-        - xcodebuild_options: '"COMPILER_INDEX_STORE_ENABLE=NO" "CODE_SIGN_IDENTITY=" "CODE_SIGNING_REQUIRED=NO" "CODE_SIGNING_ALLOWED=NO"'
-        - xctestrun: "/Users/vagrant/git/DerivedData/Build/Products/Fennec_AccessibilityTestPlan_iphonesimulator18.2-arm64.xctestrun"
-        - maximum_test_repetitions: 2
         is_always_run: true
         continue_on_fail: true
+        timeout: 1200
+        inputs:
+            - destination: platform=iOS Simulator,name=iPhone 16,OS=18.2
+            - xcodebuild_options: '"COMPILER_INDEX_STORE_ENABLE=NO" "CODE_SIGN_IDENTITY=" "CODE_SIGNING_REQUIRED=NO" "CODE_SIGNING_ALLOWED=NO"'
+            - xctestrun: "/Users/vagrant/git/DerivedData/Build/Products/Fennec_AccessibilityTestPlan_iphonesimulator18.2-arm64.xctestrun"
+            - maximum_test_repetitions: 2
     
     - script@1:
         title: Collect All Accessibility Report Files
+        is_always_run: true
         inputs:
         - content: |
             mkdir -p "$BITRISE_DEPLOY_DIR"
             find /tmp -name "AccessibilityReport_*.txt" -exec cp {} "$BITRISE_DEPLOY_DIR" \;
             find /tmp -name "AccessibilityReport_*.csv" -exec cp {} "$BITRISE_DEPLOY_DIR" \;
     
-    - deploy-to-bitrise-io@2.9.2: {}
+    - deploy-to-bitrise-io@2.9.2:
+        is_always_run: true
+        
   firefox_configure_build:
     before_run:
     - 0_detect_standalone_build
