--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -3427,23 +3427,6 @@ preferences:
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     expires: "2025-07-01"
-  private_browsing_button_tapped:
-    type: event
-    description: |
-      Records when the private browsing button is tapped
-    extra_keys:
-      is_private:
-        type: string
-        description: |
-          If the button is tapped or not (true / false)
-    bugs:
-      - https://github.com/mozilla-mobile/firefox-ios/pull/10734
-    data_reviews:
-      - https://github.com/mozilla-mobile/firefox-ios/pull/10734
-      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
-    notification_emails:
-      - fx-ios-data-stewards@mozilla.com
-    expires: "2025-07-01"
   autoplay_setting_changed:
     type: event
     description: |
@@ -4176,21 +4159,6 @@ tabs:
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     expires: "2025-07-01"
-  new_tab_pressed:
-    type: counter
-    description: |
-      Counts the number of times the add new tab button is
-      pressed
-    bugs:
-      - https://github.com/mozilla-mobile/firefox-ios/issues/6886
-    data_reviews:
-      - https://github.com/mozilla-mobile/firefox-ios/issues/6886
-      - https://github.com/mozilla-mobile/firefox-ios/pull/9673
-      - https://github.com/mozilla-mobile/firefox-ios/pull/12334
-      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
-    notification_emails:
-      - fx-ios-data-stewards@mozilla.com
-    expires: "2025-07-01"
   click_tab:
     type: event
     description: |
@@ -4451,6 +4419,56 @@ tabs:
       - fx-ios-data-stewards@mozilla.com
     expires: never
 
+# Tabs Panel
+tabs_panel:
+  new_tab_button_tapped:
+    type: event
+    description: | 
+      User taps the button in the tabs panel to open a new tab.
+    extra_keys:
+      mode:
+        type: string
+        description: |
+          The tab mode you are in when you press the new tab 
+          button (normal or private).
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11614
+      - https://github.com/mozilla-mobile/firefox-ios/issues/6886
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/6886
+      - https://github.com/mozilla-mobile/firefox-ios/pull/9673
+      - https://github.com/mozilla-mobile/firefox-ios/pull/12334
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+    metadata:
+      tags:
+        - TabsPanel
+  tab_mode_selected:
+    type: event
+    description: | 
+      User changes the tab tray mode with the segmented control in the
+      tabs panel.
+    extra_keys:
+      mode:
+        type: string
+        description: |
+          The tab mode the user is switching to (normal, private, or sync).
+    bugs:
+      - https://mozilla-hub.atlassian.net/browse/FXIOS-11614
+      - https://github.com/mozilla-mobile/firefox-ios/pull/10734
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/10734
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+    metadata:
+      tags:
+        - TabsPanel
+
 # Toasts
 toasts.close_single_tab:
   undo_tapped:
@@ -4485,7 +4503,7 @@ toasts.close_all_tabs:
       tags:
         - Toasts
         - TabsPanel
-  
+
 # Enhanced Tracking Protection metrics
 tracking_protection:
   enabled:
