--- a/firefox-ios/Client/tags.yaml
+++ b/firefox-ios/Client/tags.yaml
@@ -20,6 +20,9 @@ ContextMenu:
 Settings:
   description: Corresponds to all the options encompassed in the app's settings screens.
 
+TabsPanel:
+  description: Corresponds to all things related to the tab panel.
+
 TopSites:
   description: Corresponds to the [Feature:TopSites](https://mozilla-hub.atlassian.net/browse/FXIOS-3464)
     label on GitHub.
