Try a different simulator

--- a/.github/workflows/focus-ios-ui-tests-previous-os.yml
+++ b/.github/workflows/focus-ios-ui-tests-previous-os.yml
@@ -23,7 +23,7 @@ jobs:
           - ios_version: 17.5
             ios_simulator: iPhone 15
           - ios_version: 16.4
-            ios_simulator: iPhone 14
+            ios_simulator: iPhone 14 Pro Max
           - ios_version: 15.5
             ios_simulator: iPhone 13
     steps:
