--- a/.github/workflows/focus-ios-ui-tests-previous-os.yml
+++ b/.github/workflows/focus-ios-ui-tests-previous-os.yml
@@ -31,7 +31,7 @@ jobs:
           - ios_version: 15.5
             ios_simulator: iPhone 13 iOS 15.5
             device_type: com.apple.CoreSimulator.SimDeviceType.iPhone-13
-            runtime: com.apple.CoreSimulator.SimRuntime.iOS-15-5"
+            runtime: com.apple.CoreSimulator.SimRuntime.iOS-15-5
     steps:
       - name: Check out source code
         uses: actions/checkout@v4.1.7
