--- a/.github/workflows/focus-ios-ui-tests-previous-os.yml
+++ b/.github/workflows/focus-ios-ui-tests-previous-os.yml
@@ -76,18 +76,19 @@ jobs:
             -scheme ${{ env.xcodebuild_scheme }} \
             -target ${{ env.xcodebuild_target }} \
             -derivedDataPath ~/DerivedData \
-            -destination 'platform=iOS Simulator,name=${{ matrix.ios_simulator }},OS=${{ matrix.ios_version }}' \
+            -destination 'platform=iOS Simulator,arch:arm64,name=${{ matrix.ios_simulator }},OS=${{ matrix.ios_version }}' \
             COMPILER_INDEX_STORE_ENABLE=NO CODE_SIGN_IDENTITY= CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO ARCH="arm64"
         working-directory:  ${{ env.browser }}
       - name: Run smoke tests
         id: run-smoketests
         run: |
+          xcrun simctl list devices iphone
           xcodebuild \
             test-without-building \
             -scheme ${{ env.xcodebuild_scheme }} \
             -target ${{ env.xcodebuild_target }} \
             -derivedDataPath ~/DerivedData \
-            -destination 'platform=iOS Simulator,name=${{ matrix.ios_simulator }},OS=${{ matrix.ios_version }}' \
+            -destination 'platform=iOS Simulator,arch:arm64,name=${{ matrix.ios_simulator }},OS=${{ matrix.ios_version }}' \
             -testPlan SmokeTest \
             -resultBundlePath ${{ env.test_results_directory }}/results-smoketests \
             | tee xcodebuild-smoketests.log | xcpretty _0.3.0_ -r junit --output ./junit-smoketests.xml && exit ${PIPESTATUS[0]}
@@ -101,7 +102,7 @@ jobs:
             -scheme ${{ env.xcodebuild_scheme }} \
             -target ${{ env.xcodebuild_target }} \
             -derivedDataPath ~/DerivedData \
-            -destination 'platform=iOS Simulator,name=${{ matrix.ios_simulator }},OS=${{ matrix.ios_version }}' \
+            -destination 'platform=iOS Simulator,arch:arm64,name=${{ matrix.ios_simulator }},OS=${{ matrix.ios_version }}' \
             -testPlan FullFunctionalTests \
             -resultBundlePath ${{ env.test_results_directory }}/results-fullfunctionaltests \
             | tee xcodebuild-fullfunctionaltests.log | xcpretty _0.3.0_ -r junit --output ./junit-fullfunctionaltests.xml && exit ${PIPESTATUS[0]}
