--- a/.github/workflows/focus-ios-ui-tests-previous-os.yml
+++ b/.github/workflows/focus-ios-ui-tests-previous-os.yml
@@ -91,7 +91,7 @@ jobs:
             -derivedDataPath ~/DerivedData \
             -destination 'platform=iOS Simulator,arch=arm64,name=${{ matrix.ios_simulator }},OS=${{ matrix.ios_version }}' \
             -testPlan SmokeTest \
-            -only-testing:XCUITest/SettingTest/testCheckSetting && exit ${PIPESTATUS[0]}
+            -only-testing:XCUITest/SettingTest/testCheckSetting | xcpretty _0.3.0_
           xcodebuild \
             test-without-building \
             -scheme ${{ env.xcodebuild_scheme }} \
