--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -49,3 +49,4 @@ include:
   - nimbus-features/trackingProtectionRefactor.yaml
   - nimbus-features/revertUnsafeContinuationsRefactor.yaml
   - nimbus-features/unifiedAds.yaml
+  - nimbus-features/updatedPasswordManager.yaml
