--- a/bitrise.yml
+++ b/bitrise.yml
@@ -2299,4 +2299,4 @@ trigger_map:
 meta:
   bitrise.io:
     stack: osx-xcode-16.2.x
-    machine_type_id: g2.mac.4x-large
+    machine_type_id: g2.mac.4large
