--- a/firefox-ios/nimbus-features/cleanupHistoryReenabled.yaml
+++ b/firefox-ios/nimbus-features/cleanupHistoryReenabled.yaml
@@ -8,7 +8,7 @@ features:
         description: >
           When true the cleanupHistoryIfNeeded will be run
         type: Boolean
-        default: false
+        default: true
     defaults:
       - channel: beta
         value:
